@@ -71,38 +71,46 @@
 
     <tal:shopitems repeat="item view/getItemDatas">
 
-        <div class="listItem shopItem">
+        <table class="shopItemListingTable">
+            <tr>
+                <td class="shopItemImage">
+                    <a tal:condition="item/hasImage" tal:attributes="href item/url" style="border: none">
+                        <img src="#" tal:attributes="src string:${item/url}/image_thumb" />
+                    </a>
+                </td>
 
-            <div class="listItemImage" tal:condition="item/imageTag">
-                <a href="" tal:attributes="href item/url">
-                <img src="" tal:replace="structure item/imageTag" /></a>
-            </div>
+                <td class="shopItemContent">
 
-            <div class="listItemHeading">
-                <h2><a href="" tal:content="item/title" tal:attributes="href item/url" /></h2>
-            </div>
+                    <div class="listItem shopItem">
 
-            <p class="listItemBody">
-                <span tal:replace="item/description" />
-                <a href="" tal:attributes="href item/url" i18n:translate="label_more_link">More</a>
-            </p>
+                        <div class="listItemHeading">
+                            <h2><a href="" tal:content="item/title" tal:attributes="href item/url" /></h2>
+                        </div>
 
-            <!-- Single Item, no variations -->
-            <div tal:condition="not:item/hasVariations"
-                 tal:replace="structure python:view.single_item(item)" />
+                        <p class="listItemBody">
+                            <span tal:replace="item/description" />
+                            <a href="" tal:attributes="href item/url" i18n:translate="label_more_link">More</a>
+                        </p>
 
-            <tal:variations tal:condition="item/hasVariations"
-                            tal:define="varConf item/varConf">
-                <!-- One Variation -->
-                <div tal:condition="python:len(varConf.getVariationAttributes()) == 1"
-                     tal:replace="structure python:view.one_variation(item)" />
+                        <!-- Single Item, no variations -->
+                        <div tal:condition="not:item/hasVariations"
+                             tal:replace="structure python:view.single_item(item)" />
 
-                <!-- Two Variations -->
-                <div tal:condition="python:len(varConf.getVariationAttributes()) == 2"
-                     tal:replace="structure python:view.two_variations(item)" />
-            </tal:variations>
+                        <tal:variations tal:condition="item/hasVariations"
+                                        tal:define="varConf item/varConf">
+                            <!-- One Variation -->
+                            <div tal:condition="python:len(varConf.getVariationAttributes()) == 1"
+                                 tal:replace="structure python:view.one_variation(item)" />
 
-          </div>
+                            <!-- Two Variations -->
+                            <div tal:condition="python:len(varConf.getVariationAttributes()) == 2"
+                                 tal:replace="structure python:view.two_variations(item)" />
+                        </tal:variations>
+
+                      </div>
+                </td>
+            </tr>
+        </table>
 
     </tal:shopitems>
 
