@@ -25,13 +25,19 @@
         </h1>
 
         <div tal:replace="structure provider:plone.belowcontenttitle" />
-        <div tal:replace="structure provider:plone.abovecontentbody" />
-        <div tal:replace="structure text" />
-
-        <script type="text/javascript" tal:content="string: var varDicts = ${view/getVarDictsJSON}"></script>
-
 
         <tal:shopitems repeat="item view/getItemDatas">
+
+            <a class="shopItemDetailImage" tal:condition="item/hasImage" tal:attributes="href string:${item/url}/image/image_view_fullscreen" style="border: none;">
+                <img src="#" tal:attributes="src string:${item/url}/image_mini" />
+            </a>
+
+            <div tal:replace="structure provider:plone.abovecontentbody" />
+            <div tal:replace="structure text" />
+
+            <script type="text/javascript" tal:content="string: var varDicts = ${view/getVarDictsJSON}"></script>
+
+            <div class="visualClear"><!-- --></div>
 
             <div class="listItem shopItem">
 
